# fedora-packager

./: ChangeLog  Makefile.am  configure.ac  fedora-packager.spec
src/: fedora-burn-yubikey.py  fedora-cert.py  fedora-cvs.py  fedora-packager-setup.py  fedpkg-vcs  fedpkg.bash  fedpkg.py  fedpkg_man_page.py
src/pyfedpkg/: __init__.py  build_intelligence.py  lame_vcs_abstraction.py  man_page.py  spec.py
src/pyfedpkg/tests/: clutter.spec  run-tests.sh  tests.py
